MIC-11: Implement authorization api
