# routes/auth.go
@@ -10,11 +10,13 @@ type Auth struct {
 	R                   *gin.Engine
 	AuthenticationLogic routesinterface.IAuthenticationLogic
 	RegisterLogic       routesinterface.IRegisterLogic
+	AuthorizationLogic  routesinterface.IAuthorizationLogic
 }
 
 func (auth Auth) New() {
 	auth.R.POST("authenticate", auth.Authenticate)
 	auth.R.POST("register", auth.Register)
+	auth.R.GET("authorize", auth.Authorize)
 }
 
 // @Summary Authenticate an user
@@ -24,13 +26,12 @@ func (auth Auth) New() {
 // @Accept json
 // @Param username body string true "Username of the user"
 // @Param password body string true "Password of the user"
-// @Success 200 {boolean} boolean "The authentication is complete and access token provided in http only cookies"
+// @Success 200 {boolean} boolean "The authentication is complete and access token provided in http only cookies with key 'auth-token'"
 // @Success 210 {boolean} boolean "Wrong authentication information provided"
 func (auth Auth) Authenticate(c *gin.Context) {
 	var authInfo authenticationInformation
 
 	if err := c.ShouldBind(&authInfo); err != nil {
-		//TODO logging need to be done
 		panic(err)
 	}
 
@@ -46,7 +47,8 @@ func (auth Auth) Authenticate(c *gin.Context) {
 		statusCode = 210
 	}
 
-	c.SetCookie("auth-token", token, 60*60*24, "", "", true, true)
+	c.SetCookie("hello", "please", 60*60*24, "", "/localhost:8080", false, false)
+	c.SetCookie("auth-token", token, 60*60*24, "", "/localhost:8080", false, true)
 	c.Writer.WriteHeader(statusCode)
 }
 
@@ -63,7 +65,6 @@ func (auth Auth) Register(c *gin.Context) {
 	var authInfo authenticationInformation
 
 	if err := c.ShouldBind(&authInfo); err != nil {
-		//TODO logging need to be done
 		panic(err)
 	}
 
@@ -80,6 +81,29 @@ func (auth Auth) Register(c *gin.Context) {
 	}
 
 	c.Writer.WriteHeader(statusCode)
+}
+
+// @Summary Authorize an user
+// @Description It will authorize an user with jwt token from http only cookies with key name 'auth-token'
+// @ID authorize-user
+// @Router /authorize [get]
+// @Accept json
+// @Success 200 {boolean} boolean "The user is authorized"
+// @Success 210 {boolean} boolean "Wrong jwt token"
+func (auth Auth) Authorize(c *gin.Context) {
+	authToken, err := c.Cookie("auth-token")
+	if err != nil {
+		panic(err)
+	}
+
+	auth.AuthorizationLogic.SetAuthToken(authToken)
+
+	authorizationStatus := auth.AuthorizationLogic.Authorize()
+	if authorizationStatus == 1 {
+		c.Writer.WriteHeader(200)
+	} else {
+		c.Writer.WriteHeader(210)
+	}
 }
 
 //* Data Classes
